# findus

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  Procfile  RATE_LIMITING_IMPLEMENTATION.md  README.md  TESTING.md  cookies.txt  docker-compose.yml  manage.py  package.json  playwright_integration_test.py  pyproject.toml  requirements.txt  test_integration.py  webpack-stats.json  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
chat/: __init__.py  admin.py  ai_service.py  analysis_models.py  apps.py  auth_views.py  embedding_service.py  fields.py  models.py  services.py  similarity_service.py  test_demo.py  tests.py  tests_language_learning.py  urls.py  views.py
chat/management/commands/: create_sample_users.py  infer_user_levels.py  seed_concepts.py
chat/migrations/: 0001_initial.py  0002_afteractionreport.py  0003_conversation_user.py  0004_conversation_language.py  0005_conversation_analysis_language.py  0006_grammarconcept_errorpattern_conceptmastery_and_more.py  0007_refactor_userprofile_to_languageprofile.py  0008_auto_20250924_1751.py  0009_recreate_embedding_as_vector.py  0010_remove_streak_fields.py  0011_increase_field_lengths.py  __init__.py
chat/static/chat/css/: highlight.css
chat/templates/chat/: analysis.html  chat.html  demo_chat.html  demo_language_selection.html  language_selection.html  login.html  register.html
chat/templatetags/: __init__.py  markdown_filters.py
docker/postgres/: init.sql
findus/: __init__.py  asgi.py  cache_backends.py  ratelimit_middleware.py  settings.py  test_settings.py  urls.py  wsgi.py
frontend/src/: index.js  markdownRenderer.js
