[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "findus.settings"

[project]
name = "findus"
version = "0.1.0"
description = "A Django chat application integrated with Google Gemini API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Toby Brachmann"}
]
dependencies = [
    "django>=5.2.0",
    "google-genai>=1.0.0",
    "pydantic-ai>=1.0.0",
    "logfire[django,sqlite3]>=4.0.0",
    "python-dotenv>=1.0.0",
    "django-extensions>=3.0.0",
    "ipython>=8.0.0",
    "uvicorn>=0.35.0",
    "dj-database-url>=2.0.0",
    "psycopg[binary]>=3.0.0",
    "whitenoise>=6.0.0",
    "markdown>=3.0.0",
    "django-webpack-loader>=3.2.1",
    "django-ratelimit>=4.1.0",
    "pgvector>=0.3.0",
    "selenium>=4.35.0",
    "playwright>=1.55.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pre-commit",
    "django-stubs",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "types-markdown>=3.9.0.20250906",
]

[tool.setuptools]
packages = ["findus", "chat"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", "venv", "migrations"]
extend-ignore = ["E203", "W503"]  # Conflicts with Black
